Source/WebCore/rendering/style/GridArea.h
@@ -1,6 +1,6 @@
 /*
  * Copyright (C) 2013 Google Inc. All rights reserved.
- * Copyright (C) 2013, 2014, 2016 Igalia S.L.
+ * Copyright (C) 2013-2017 Igalia S.L.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions are
@@ -156,8 +156,8 @@ private:
         }
 #endif
 
-        m_startLine = std::max(-kGridMaxTracks, std::min(startLine, kGridMaxTracks - 1));
-        m_endLine = std::max(-kGridMaxTracks + 1, std::min(endLine, kGridMaxTracks));
+        m_startLine = std::max(GridPosition::min(), std::min(startLine, GridPosition::max() - 1));
+        m_endLine = std::max(GridPosition::min() + 1, std::min(endLine, GridPosition::max()));
     }
 
     int m_startLine;
